--- a/GoldenGuess/public/cadastro.html
+++ b/GoldenGuess/public/cadastro.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login e Cadastro</title>
+    <title>Cadastro</title>
     <link rel="stylesheet" href="stylesheets/login_cadastro.css">
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 </head>
@@ -15,30 +15,13 @@
             <h1 class="brand-title">The Golden Guess</h1>
         </div>
         <div class="form-container">
-            <!-- Botões Login e Cadastro -->
+            <!-- Botões Cadastro -->
             <div class="toggle-buttons">
-                <button id="login-btn" class="toggle-button active">Login</button>
-                <button id="register-btn" class="toggle-button">Cadastro</button>
+                <button id="register-btn" class="toggle-button active">Cadastro</button>
             </div>
             <div class="form-content">
-                <!-- Formulário de Login -->
-                <form id="login-form" class="form active">
-                    <h1 class="form-title">Login</h1>
-                    <div class="form-group">
-                        <label for="login-username">Usuário</label>
-                        <input type="text" id="login-username" name="username" placeholder="Digite seu usuário"
-                            required>
-                    </div>
-                    <div class="form-group">
-                        <label for="login-password">Senha</label>
-                        <input type="password" id="login-password" name="password" placeholder="Digite sua senha"
-                            required>
-                    </div>
-                    <button type="submit" class="form-button">Entrar</button>
-                </form>
-
                 <!-- Formulário de Cadastro -->
-                <form id="register-form" class="form">
+                <form id="register-form" class="form active">
                     <h1 class="form-title">Cadastro</h1>
                     <div class="form-group">
                         <label for="register-nome">Nome</label>
