--- a/GoldenGuess/public/cadastro.html
+++ b/GoldenGuess/public/cadastro.html
@@ -4,59 +4,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro</title>
-    <link rel="stylesheet" href="stylesheets/login_cadastro.css">
+    <title>GoldenGuess</title>
+    <link rel="stylesheet" href="stylesheets/cadastro.css">
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="container">
-        <div class="header">
-            <h1 class="brand-title">The Golden Guess</h1>
-        </div>
-        <div class="form-container">
-            <!-- Botões Cadastro -->
-            <div class="toggle-buttons">
-                <button id="register-btn" class="toggle-button active">Cadastro</button>
-            </div>
-            <div class="form-content">
-                <!-- Formulário de Cadastro -->
-                <form id="register-form" class="form active">
-                    <h1 class="form-title">Cadastro</h1>
-                    <div class="form-group">
-                        <label for="register-nome">Nome</label>
-                        <input type="text" id="register-nome" name="nome" placeholder="Digite seu nome" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="register-cpf">CPF</label>
-                        <input type="text" id="register-cpf" name="cpf" placeholder="Digite seu CPF" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="register-email">Email</label>
-                        <input type="email" id="register-email" name="email" placeholder="Digite seu email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="register-data-nascimento">Data de Nascimento</label>
-                        <input type="date" id="register-data-nascimento" name="data_nascimento" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="register-password">Senha</label>
-                        <input type="password" id="register-password" name="senha" placeholder="Crie uma senha"
-                            required>
-                    </div>
-                    <div class="form-group">
-                        <label for="confirm-password">Confirmar Senha</label>
-                        <input type="password" id="confirm-password" name="confirm-password"
-                            placeholder="Confirme sua senha" required>
-                    </div>
-                    <button type="submit" class="form-button">Cadastrar</button>
-                </form>
-
-            </div>
-
+    <div class="overlay">
+        <div class="container">
+            <form id="register-form"> <!-- Adicionado ID no formulário -->
+                <h1>GoldenGuess</h1>
+                <div class="input-container">
+                    <label for="register-nome">Nome</label>
+                    <input type="text" id="register-nome" name="nome" placeholder="Usuário" required>
+                </div>
+                <div class="input-container">
+                    <label for="register-cpf">CPF</label>
+                    <input type="text" id="register-cpf" name="cpf" placeholder="___.___.___-__" required>
+                </div>
+                <div class="input-container">
+                    <label for="register-email">Email</label>
+                    <input type="email" id="register-email" name="email" placeholder="usuario@email.com" required>
+                </div>
+                <div class="input-container">
+                    <label for="register-data-nascimento">Data de Nascimento</label>
+                    <input type="text" id="register-data-nascimento" name="data_nascimento" placeholder="__/__/____" required>
+                </div>
+                <div class="input-container">
+                    <label for="register-password">Senha</label>
+                    <input type="password" id="register-password" name="senha" placeholder="********" required>
+                </div>
+                <div class="input-container">
+                    <label for="confirm-password">Confirmar Senha</label>
+                    <input type="password" id="confirm-password" name="confirmPassword" placeholder="********" required>
+                </div>
+                <button type="submit" class="btn">Cadastrar</button>
+            </form>
         </div>
     </div>
-    <script src="javascripts/login_cadastro.js"></script>
+    <script src="javascripts/cadastro.js"></script>
 </body>
 
 </html>
