--- a/GoldenGuess/public/cadastro.html
+++ b/GoldenGuess/public/cadastro.html
@@ -12,11 +12,12 @@
 <body>
     <div class="overlay">
         <div class="container">
-            <form id="register-form"> <!-- Adicionado ID no formulário -->
+            <form id="register-form">
                 <h1>GoldenGuess</h1>
                 <div class="input-container">
                     <label for="register-nome">Nome</label>
-                    <input type="text" id="register-nome" name="nome" placeholder="Usuário" required>
+                    <input type="text" id="register-nome"
+                    name="nome" placeholder="Usuario" required>
                 </div>
                 <div class="input-container">
                     <label for="register-cpf">CPF</label>
@@ -24,19 +25,24 @@
                 </div>
                 <div class="input-container">
                     <label for="register-email">Email</label>
-                    <input type="email" id="register-email" name="email" placeholder="usuario@email.com" required>
+                    <input type="email" 
+                    id="register-email"
+                    name="email" placeholder="usuario@email.com" required>
                 </div>
                 <div class="input-container">
                     <label for="register-data-nascimento">Data de Nascimento</label>
-                    <input type="text" id="register-data-nascimento" name="data_nascimento" placeholder="__/__/____" required>
+                    <input id="register-data-nascimento" name="data_nascimento" type="text" placeholder="__/__/____" required>
                 </div>
                 <div class="input-container">
                     <label for="register-password">Senha</label>
-                    <input type="password" id="register-password" name="senha" placeholder="********" required>
+                    <input type="password" id="register-password"
+                    name="senha"
+                    placeholder="********" required>
                 </div>
                 <div class="input-container">
                     <label for="confirm-password">Confirmar Senha</label>
-                    <input type="password" id="confirm-password" name="confirmPassword" placeholder="********" required>
+                    <input type="password" id="confirm-password"
+                    nome="confirmPassword" placeholder="********" required>
                 </div>
                 <button type="submit" class="btn">Cadastrar</button>
             </form>
