--- a/GoldenGuess/public/premiacoes-list.html
+++ b/GoldenGuess/public/premiacoes-list.html
@@ -15,7 +15,7 @@
     <ul>
       <li><a href="principal.html"><i class="fa-solid fa-house" style="color: #ffffff;" data-tooltip="Home"></i></a></li>
       <li><a href="premiacoes-list.html"><i class="fa-solid fa-trophy" style="color: #ffffff;" data-tooltip="Premiações"></i></a></li>
-      <li><i class="fa-solid fa-comments" style="color: #ffffff;" data-tooltip="Seus palpites"></i></li>
+      <li><a href="perfil.html"><i class="fa-solid fa-comments" style="color: #ffffff;" data-tooltip="Seus palpites"></i></a></li>
       <li><a href="login.html" id="logout-link"><i class="fa-solid fa-right-from-bracket" style="color: #ffffff;" data-tooltip="Sair"></i></a></li>
     </ul>
   </div>
